# UDAV2-ControlNet

./: one_click_install.sh  pyproject.toml
controlnet/: README.md  config.json
semseg/: README.md  dinov2.py
semseg/config/depth_anything_v2/: depth_anything_v2_large_mask2former_16xb1_160k_ade20k_896x896.py  depth_anything_v2_large_mask2former_16xb1_80k_cityscapes_896x896.py  depth_anything_v2_large_mask2former_16xb1_80k_cityscapes_896x896_ms.py
